
  * Add dependency on packaged version of Vollkorn desktop font,
    so that its use in HTML docs may be restored.  Thanks to
    Adam Borowski for suggestion.
  * Add debian/gbp.conf.
  * debian/control:
    - Update Vcs-* to salsa.debian.org.
    - Remove unnecessary Testsuite field.
    - Set "Rules-Requires-Root: no".
  * Update lintian override to debian-watch-does-not-check-gpg-signature.
  * Add machine-readable upstream metadata.

 -- Carlos Maddela <e7appew@gmail.com>  Tue, 01 Aug 2017 15:51:53 +1000

rmlint (2.6.1-1) unstable; urgency=medium

  * New upstream version [2.6.1].
  * Rebase patch queue and drop changes already applied upstream.
  * Indicate compliance with latest standards version [4.0.0].
  * Make 'parameterized' module available to 'nose' tests.
  * Simplify (and hopefully make adaptable to future changes in host
    names and version numbers) the sed rules for patching HTML docs.
  * Fix man page typos.
  * Avoid calling dpkg-parsechangelog directly from debian/rules.
  * Fix new privacy breach issues by disabling the asciinema demo
    and the use of web fonts.
  * Add package test to prevent privacy breach issues in HTML docs.

 -- Carlos Maddela <e7appew@gmail.com>  Mon, 31 Jul 2017 09:44:43 +1000

rmlint (2.4.6-2) unstable; urgency=medium

  * Fix missing dependencies in rmlint-gui package. (Closes: #855255)
  * Rename debian/docs to debian/rmlint.docs for consistency's sake.
  * Fix FTBFS for hurd-i386.
  * Exclude compiled schema from being packaged with rmlint-gui.
  * Fix formatting of unordered list in man page.
  * Fix HTML generated by privacy-breach-workaround.patch.

 -- Carlos Maddela <e7appew@gmail.com>  Fri, 17 Feb 2017 13:35:29 +1100

rmlint (2.4.6-1) unstable; urgency=medium

  * Initial upload to Debian. Thanks to Axel Beckert for getting
    it all started, and to Roger Shimizu for suggested improvements.
    (Closes: #845155)

 -- Carlos Maddela <e7appew@gmail.com>  Tue, 14 Feb 2017 23:11:30 +1100